[2.92.0 RC] Rotate Tool and Adjust Last Operation - angles inverted #85886

Closed
opened 2021-02-22 15:26:28 +01:00 by Eugene Du · 15 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: b1142858d4
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 11:07, hash: 420f538fad
Worked: 2.91.2

Short description of error
When adjusting angles in "Adjust last operation" after the Rotate Tool - the angle is inverted.

Exact steps for others to reproduce the error
2.92.0 RC
2.92.0 RC.mp4
2.91.2
2.91.2.mp4
Rotation_Angles_In_ALO_Inverted.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1650 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-19 18:02, hash: `b1142858d4` Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 11:07, hash: `420f538fad` Worked: 2.91.2 **Short description of error** When adjusting angles in "Adjust last operation" after the Rotate Tool - the angle is inverted. **Exact steps for others to reproduce the error** 2.92.0 RC [2.92.0 RC.mp4](https://archive.blender.org/developer/F9837964/2.92.0_RC.mp4) 2.91.2 [2.91.2.mp4](https://archive.blender.org/developer/F9837965/2.91.2.mp4) [Rotation_Angles_In_ALO_Inverted.blend](https://archive.blender.org/developer/F9827821/Rotation_Angles_In_ALO_Inverted.blend)
Author

Added subscriber: @APEC

Added subscriber: @APEC

#86349 was marked as duplicate of this issue

#86349 was marked as duplicate of this issue

#85993 was marked as duplicate of this issue

#85993 was marked as duplicate of this issue

#86333 was marked as duplicate of this issue

#86333 was marked as duplicate of this issue

Added subscriber: @finirpar

Added subscriber: @finirpar

It is hard to see the reason of inversion.
Is it random?

It is hard to see the reason of inversion. Is it random?
Author

@finirpar
no, the first 14 seconds I demonstrate 2.92.0 RC behavior, last - 2.91.2, where it works.

@finirpar no, the first 14 seconds I demonstrate 2.92.0 RC behavior, last - 2.91.2, where it works.
Author

Sorry for updating task again, added correct video with angle comparison in Object Properties

Sorry for updating task again, added correct video with angle comparison in Object Properties

Thanks for the clarification

Thanks for the clarification

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2021-02-27 21:07:42 +01:00

This issue was referenced by 92743cc895

This issue was referenced by 92743cc895dd34bdaa165679bf9d06dfa3f8cb24

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @simonetos.the.greek, @lichtwerk

Added subscribers: @simonetos.the.greek, @lichtwerk
Member

Added subscribers: @AlbertoVelazquez, @mano-wii

Added subscribers: @AlbertoVelazquez, @mano-wii
Member

Added subscriber: @Praesidi

Added subscriber: @Praesidi
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85886
No description provided.