Fix T85886: Rotate Tool and Adjust Last Operation - angles inverted

The constraint was not set when redoing.

This commit also removes `postInputRotation`. I really couldn't see a use for it.