source/blender/editors/transform/transform_mode.c
@@ -554,15 +554,6 @@ void headerRotation(TransInfo *t, char str[UI_MAX_DRAW_STR], float final)
   }
 }
 
-void postInputRotation(TransInfo *t, float values[3])
-{
-  float axis_final[3];
-  copy_v3_v3(axis_final, t->spacemtx[t->orient_axis]);
-  if ((t->con.mode & CON_APPLY) && t->con.applyRot) {
-    t->con.applyRot(t, NULL, NULL, axis_final, values);
-  }
-}
-
 /**
  * Applies values of rotation to `td->loc` and `td->ext->quat`
  * based on a rotation matrix (mat) and a pivot (center).
